@@ -1,10 +1,11 @@
 package ca.uhn.fhir.jpa.dao.r4;
 
 import ca.uhn.fhir.jpa.api.config.JpaStorageSettings;
-import ca.uhn.fhir.jpa.model.dao.JpaPid;
+import ca.uhn.fhir.jpa.dao.IHSearchEventListener;
 import ca.uhn.fhir.jpa.search.builder.SearchBuilder;
 import ca.uhn.fhir.jpa.search.lastn.ElasticsearchSvcImpl;
 import ca.uhn.fhir.jpa.searchparam.SearchParameterMap;
+import ca.uhn.fhir.jpa.test.util.TestHSearchEventDispatcher;
 import ca.uhn.fhir.rest.param.ReferenceParam;
 import ca.uhn.fhir.rest.param.TokenParam;
 import org.hl7.fhir.instance.model.api.IIdType;
@@ -14,7 +15,11 @@ import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.ArgumentCaptor;
+import org.mockito.Mock;
+import org.mockito.Mockito;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 
 import java.io.IOException;
@@ -22,28 +27,34 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
-import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.is;
-import static org.hamcrest.Matchers.matchesPattern;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.mockito.Mockito.times;
-import static org.mockito.Mockito.verify;
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.when;
 
 @ExtendWith(SpringExtension.class)
 public class FhirResourceDaoR4SearchLastNIT extends BaseR4SearchLastN {
+	private static final Logger ourLog = LoggerFactory.getLogger(FhirResourceDaoR4SearchLastNIT.class);
+
 	@BeforeEach
 	public void enableAdvancedHSearchIndexing() {
 		myStorageSettings.setLastNEnabled(true);
+		myStorageSettings.setAdvancedHSearchIndexing(true);
+		myHSearchEventDispatcher.register(mySearchEventListener);
+		ourLog.info("enableAdvancedHSearchIndexing finished.  lastn {} advancedHSearchIndexing {}", myStorageSettings.isLastNEnabled(), myStorageSettings.isAdvancedHSearchIndexing());
 	}
 
 	@AfterEach
 	public void reset() {
-		SearchBuilder.setMaxPageSize50ForTest(false);
+		SearchBuilder.setMaxPageSizeForTest(null);
 		myStorageSettings.setStoreResourceInHSearchIndex(new JpaStorageSettings().isStoreResourceInHSearchIndex());
+		myStorageSettings.setAdvancedHSearchIndexing(new JpaStorageSettings().isAdvancedHSearchIndexing());
 	}
+
+	@Autowired
+	private TestHSearchEventDispatcher myHSearchEventDispatcher;
+
+	@Mock
+	private IHSearchEventListener mySearchEventListener;
 
 	@Test
 	public void testLastNChunking() {
@@ -66,42 +77,39 @@ public class FhirResourceDaoR4SearchLastNIT extends BaseR4SearchLastN {
 		when(mySrd.getParameters()).thenReturn(requestParameters);
 
 		// Set chunk size to 50
-		SearchBuilder.setMaxPageSize50ForTest(true);
+		SearchBuilder.setMaxPageSizeForTest(50);
 
+		// Run once to fill caches
+		toUnqualifiedVersionlessIdValues(myObservationDao.observationsLastN(params, mockSrd(), null));
+
+		// Actually test
 		myCaptureQueriesListener.clear();
 		List<String> results = toUnqualifiedVersionlessIdValues(myObservationDao.observationsLastN(params, mockSrd(), null));
-		assertEquals(75, results.size());
+		assertThat(results).hasSize(75);
 		myCaptureQueriesListener.logSelectQueriesForCurrentThread();
 		List<String> queries = myCaptureQueriesListener
 			.getSelectQueriesForCurrentThread()
 			.stream()
 			.map(t -> t.getSql(true, false))
-			.collect(Collectors.toList());
+			.toList();
 
 		// Two chunked queries executed by the QueryIterator (in current thread) and two chunked queries to retrieve resources by PID.
-		assertEquals(4, queries.size());
+		assertThat(queries).hasSize(4);
 
 		// The first and third chunked queries should have a full complement of PIDs
-		StringBuilder firstQueryPattern = new StringBuilder(".*RES_ID IN \\('[0-9]+'");
-		for (int pidIndex = 1; pidIndex < 50; pidIndex++) {
-			firstQueryPattern.append(",'[0-9]+'");
-		}
+		StringBuilder firstQueryPattern = new StringBuilder(".*RES_ID\\)? IN \\('[0-9]+'");
+        firstQueryPattern.append(",'[0-9]+'".repeat(49));
 		firstQueryPattern.append("\\).*");
-		assertThat(queries.get(0).toUpperCase().replaceAll(" , ", ","), matchesPattern(firstQueryPattern.toString()));
-		assertThat(queries.get(2).toUpperCase().replaceAll(" , ", ","), matchesPattern(firstQueryPattern.toString()));
+		assertThat(queries.get(0).toUpperCase().replaceAll(" , ", ",")).matches(firstQueryPattern.toString());
+		assertThat(queries.get(2).toUpperCase().replaceAll(" , ", ",")).matches(firstQueryPattern.toString());
 
 		// the second and fourth chunked queries should be padded with "-1".
-		StringBuilder secondQueryPattern = new StringBuilder(".*RES_ID IN \\('[0-9]+'");
-		for (int pidIndex = 1; pidIndex < 25; pidIndex++) {
-			secondQueryPattern.append(",'[0-9]+'");
-		}
-		for (int pidIndex = 0; pidIndex < 25; pidIndex++) {
-			secondQueryPattern.append(",'-1'");
-		}
+		StringBuilder secondQueryPattern = new StringBuilder(".*RES_ID\\)? IN \\('[0-9]+'");
+        secondQueryPattern.append(",'[0-9]+'".repeat(24));
+        secondQueryPattern.append(",'-1'".repeat(25));
 		secondQueryPattern.append("\\).*");
-		assertThat(queries.get(1).toUpperCase().replaceAll(" , ", ","), matchesPattern(secondQueryPattern.toString()));
-		assertThat(queries.get(3).toUpperCase().replaceAll(" , ", ","), matchesPattern(secondQueryPattern.toString()));
-
+		assertThat(queries.get(1).toUpperCase().replaceAll(" , ", ",")).matches(secondQueryPattern.toString());
+		assertThat(queries.get(3).toUpperCase().replaceAll(" , ", ",")).matches(secondQueryPattern.toString());
 	}
 
 	@Test
@@ -134,18 +142,12 @@ public class FhirResourceDaoR4SearchLastNIT extends BaseR4SearchLastN {
 
 	}
 
+	/**
+	 * We pull the resources from Hibernate Search when LastN uses Hibernate Search
+	 * Override the test verification to validate only one search was performed
+	 */
 	void verifyResourcesLoadedFromElastic(List<IIdType> theObservationIds, List<String> theResults) {
-		List<JpaPid> expectedArgumentPids = JpaPid.fromLongList(
-			theObservationIds.stream().map(IIdType::getIdPartAsLong).collect(Collectors.toList())
-		);
-		ArgumentCaptor<List<JpaPid>> actualPids = ArgumentCaptor.forClass(List.class);
-		verify(myElasticsearchSvc, times(1)).getObservationResources(actualPids.capture());
-		assertThat(actualPids.getValue(), is(expectedArgumentPids));
-
-		List<String> expectedObservationList = theObservationIds.stream()
-			.map(id -> id.toUnqualifiedVersionless().getValue()).collect(Collectors.toList());
-		assertEquals(expectedObservationList, theResults);
-
+		Mockito.verify(mySearchEventListener, Mockito.times(1))
+			.hsearchEvent(IHSearchEventListener.HSearchEventType.SEARCH);
 	}
-
 }
